# learn-ffmpeg

./: CMakeLists.txt  LICENSE  README.md  common.h
audio/: CMakeLists.txt  README.md  audio_fifo.cpp  audio_fmt_convert.cpp  pcm_record.cpp  resample_pcm.cpp
